--- a/src/shared-components/testimonialItem/testimonialItem.scss
+++ b/src/shared-components/testimonialItem/testimonialItem.scss
@@ -73,6 +73,7 @@
     font-size: rem(16px);
     line-height: rem(24px);
     color: #333333;
+    text-align: justify;
 
     &:not(:first-child) {
       margin-top: rem(24px);
