--- a/src/shared-components/testimonialItem/testimonialItem.css
+++ b/src/shared-components/testimonialItem/testimonialItem.css
@@ -64,6 +64,7 @@
   .client-testimonial-info p {
     font-size: 1rem;
     line-height: 1.5rem;
-    color: #333333; }
+    color: #333333;
+    text-align: justify; }
     .client-testimonial-info p:not(:first-child) {
       margin-top: 1.5rem; }
