--- a/src/shared-components/testimonialItem/testimonialItem.css
+++ b/src/shared-components/testimonialItem/testimonialItem.css
@@ -32,14 +32,19 @@
       margin-bottom: 0;
       margin-right: 2rem; } }
   .client-profile .profile-img {
-    width: 6.25rem;
-    height: 6.25rem;
+    width: 4.5625rem;
+    height: 4.5625rem;
     border-radius: 50%;
     margin-right: 1rem; }
     @media (min-width: 992px) {
       .client-profile .profile-img {
-        width: 7.8125rem;
-        height: 7.8125rem;
+        margin: 0 auto; } }
+  .client-profile .company-logo {
+    width: 9.375rem;
+    height: auto; }
+    @media (min-width: 992px) {
+      .client-profile .company-logo {
+        width: 100%;
         margin: 0 auto; } }
 
 .client-details h6,
@@ -60,7 +65,8 @@
   font-size: 0.875rem; }
 
 .client-testimonial-info {
-  flex: 1; }
+  flex: 1;
+  height: 15.625rem; }
   .client-testimonial-info p {
     font-size: 1rem;
     line-height: 1.5rem;
