linking is done on news pages

--- a/src/shared-components/defaultButton/defaultButton.css
+++ b/src/shared-components/defaultButton/defaultButton.css
@@ -41,3 +41,7 @@
   border-right: none;
   box-shadow: none;
   outline: none; }
+
+.default-btn-link:hover {
+  text-decoration: none;
+  outline: none; }
