--- a/src/assets/stylesheets/_shared.scss
+++ b/src/assets/stylesheets/_shared.scss
@@ -334,3 +334,72 @@ img {
   @include scrollbars();
 }
 /* shared end */
+
+.link-item-wrap {
+  padding: rem(40px) 0 rem(80px);
+
+  .link-item-list {
+    flex-direction: column;
+    @include media-breakpoint-up(lg) {
+      flex-direction: row;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #e86055;
+        width: 100%;
+        height: rem(4px);
+      }
+    }
+  }
+
+  .link-item {
+    padding: 0 rem(24px);
+    z-index: 9999;
+
+    > a {
+      border-radius: 12px;
+      max-width: rem(329px);
+      width: rem(329px);
+      font-size: rem(20px);
+      line-height: rem(24px);
+      color: $white;
+      font-weight: 600;
+      background-size: cover !important;
+      background-position: center !important;
+      padding: 40px 24px;
+
+      @include media-breakpoint-up(lg) {
+        font-size: rem(31px);
+        line-height: rem(36px);
+      }
+
+      &:focus-visible {
+        outline-offset: unset;
+        outline: none;
+      }
+
+      &.-leadership {
+        background: url("../images/revampImages/leadership-bg.png") no-repeat;
+      }
+
+      &.-contact-us {
+        background: url("../images/revampImages/contact-us-bg.png") no-repeat;
+      }
+    }
+
+    .arrow-img {
+      width: rem(25px);
+    }
+
+    &:not(:first-child) {
+      margin-top: rem(24px);
+
+      @include media-breakpoint-up(lg) {
+        margin-top: 0;
+      }
+    }
+  }
+}
