--- a/src/shared-components/article/article.css
+++ b/src/shared-components/article/article.css
@@ -39,8 +39,7 @@
   @media (min-width: 768px) {
     .article-items {
       margin-bottom: 0;
-      max-width: 17.8125rem;
-      padding: 1rem 1.5rem 1.5rem; } }
+      max-width: 17.8125rem; } }
   @media (min-width: 992px) {
     .article-items {
       max-width: 15.5rem; } }
@@ -58,16 +57,11 @@
     font-size: 0.75rem;
     line-height: 1.125rem;
     color: #020449;
-    font-weight: 500;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical; }
+    font-weight: 500; }
     @media (min-width: 768px) {
       .article-items p {
-        font-size: 1rem;
-        line-height: 1.5rem;
-        -webkit-line-clamp: 3;
-        text-align: center; } }
+        font-size: 0.875rem;
+        line-height: 1.5rem; } }
   .article-items .image-wrap {
     margin: 0 -2.125rem 1.5rem;
     box-shadow: 0px 3px 6px #00000029;
@@ -79,5 +73,13 @@
       height: 146px;
       width: 100%;
       border-radius: 0.5rem; }
-  .article-items .default-btn {
-    margin: 0 auto; }
+  .article-items .default-btn-link {
+    position: absolute;
+    left: 1.5rem;
+    bottom: 1.5rem; }
+  .article-items .article-item-top-content {
+    flex: 1;
+    padding-bottom: 3rem; }
+    @media (min-width: 992px) {
+      .article-items .article-item-top-content {
+        padding-bottom: 2.5rem; } }
