--- a/src/shared-components/article/article.scss
+++ b/src/shared-components/article/article.scss
@@ -41,7 +41,6 @@
   @include media-breakpoint-up(md) {
     margin-bottom: 0;
     max-width: rem(285px);
-    padding: rem(16px) rem(24px) rem(24px);
   }
 
   @include media-breakpoint-up(lg) {
@@ -65,14 +64,9 @@
     line-height: rem(18px);
     color: #020449;
     font-weight: 500;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     @include media-breakpoint-up(md) {
-      font-size: rem(16px);
+      font-size: rem(14px);
       line-height: rem(24px);
-      -webkit-line-clamp: 3;
-      text-align: center;
     }
   }
 
@@ -93,7 +87,20 @@
     }
   }
 
-  .default-btn {
-    margin: 0 auto;
+  .default-btn-link {
+    position: absolute;
+    left: rem(24px);
+    bottom: rem(24px);
+  }
+  // .default-btn {
+  //   margin: 0 auto;
+  // }
+
+  .article-item-top-content {
+    flex: 1;
+    padding-bottom: rem(48px);
+    @include media-breakpoint-up(lg) {
+      padding-bottom: rem(40px);
+    }
   }
 }
