--- a/src/shared-components/innovationItem/innovationItem.css
+++ b/src/shared-components/innovationItem/innovationItem.css
@@ -5,57 +5,53 @@
 /* flex Sass mixin */
 /* mixins end */
 .innovation-item-wrap {
-  border-radius: 0 0 0.75rem 0.75rem;
-  background-color: #fff; }
-  .innovation-item-wrap .border-box {
-    height: 1.5rem;
-    background: linear-gradient(279deg, #020449 0%, #134b6c 90%);
-    box-shadow: 6px 8px 16px rgba(0, 0, 0, 0.392); }
-  .innovation-item-wrap:not(:first-child) {
-    margin-top: 3.5rem; }
-
-.product-content {
-  flex-wrap: wrap; }
-  @media (min-width: 992px) {
-    .product-content {
-      flex-wrap: unset; } }
-
-.product-features {
-  flex: 1;
-  background-color: #fbfbfb;
-  box-shadow: -2px 0px 6px rgba(0, 0, 0, 0.051);
-  border-radius: 0 0 0.75rem 0.75rem; }
-  @media (min-width: 992px) {
-    .product-features {
-      padding: 3rem;
-      border-radius: 0 0 0.75rem 0; } }
+  margin-top: 3.5rem; }
 
 .product-details {
-  align-items: center;
-  flex-direction: column;
-  padding: 1rem; }
+  padding: 1.5rem 1rem;
+  border-radius: 0.75rem;
+  flex-direction: column; }
   @media (min-width: 992px) {
     .product-details {
-      flex: 0 0 30%;
-      align-items: flex-start;
-      padding: 3rem; } }
+      align-items: center;
+      flex-direction: row;
+      padding: 1.5rem 3rem; } }
   .product-details img {
-    width: 12.5rem;
-    height: auto; }
+    width: 18.75rem;
+    margin: 0 auto;
+    height: 100%;
+    margin-bottom: 2rem; }
     @media (min-width: 992px) {
       .product-details img {
-        width: 18.125rem; } }
+        width: 18.75rem;
+        border-right: 1px solid #707070;
+        padding-right: 3rem;
+        margin: 0; } }
   .product-details p {
     font-size: 1rem;
     line-height: 1.25rem;
     color: #707070; }
     @media (min-width: 992px) {
       .product-details p {
-        line-height: 1.5rem; } }
+        line-height: 1.5rem;
+        margin-left: 3rem; } }
 
-.feature-list li:not(:first-child) {
-  margin-top: 1.5rem; }
-
-.feature-list li > img {
-  width: 5.625rem;
-  height: auto; }
+.feature-list {
+  flex-wrap: wrap; }
+  @media (min-width: 992px) {
+    .feature-list {
+      margin: 0 -0.5rem;
+      flex-wrap: unset; } }
+  @media (min-width: 992px) {
+    .feature-list li {
+      padding: 0 0.5rem; } }
+  .feature-list li .feature-list-item {
+    border-radius: 0.75rem; }
+    .feature-list li .feature-list-item > img {
+      width: 5.625rem;
+      height: auto; }
+  .feature-list li:not(:first-child) {
+    margin-top: 1.5rem; }
+    @media (min-width: 992px) {
+      .feature-list li:not(:first-child) {
+        margin-top: 0; } }
