home page banner section class name changed

--- a/src/assets/stylesheets/pages/_home.scss
+++ b/src/assets/stylesheets/pages/_home.scss
@@ -706,7 +706,7 @@
   background-color: $gray-96;
 }
 
-.banner-wrapper-mb {
+.main-banner-wrapper-mb {
   height: 384px;
   display: flex;
   align-items: center;
@@ -724,7 +724,7 @@
   }
 }
 
-.banner-wrapper {
+.main-banner-wrapper {
   height: 384px;
   display: flex;
   align-items: center;
