--- a/src/assets/stylesheets/pages/_new-pages.scss
+++ b/src/assets/stylesheets/pages/_new-pages.scss
@@ -1,27 +1,4 @@
-.josh-content {
-  padding: rem(56px) 0 0;
-  background-color: #f7f7f7;
-
-  @include media-breakpoint-up(lg) {
-    padding: rem(76px) 0 0;
-  }
-}
-
-.banner-section {
-  z-index: 0;
-}
-
-.media-wrapper {
-  padding: rem(24px) rem(8px) rem(56px);
-  flex-wrap: wrap;
-  display: flex;
-
-  @include media-breakpoint-up(lg) {
-    padding: 1.5rem 0 5rem;
-  }
-}
-
-.news-banner-section {
+.banner-wrapper {
   &.white-paper-banner {
     .banner-wrap {
       background: url("../../assets/images/revampImages/our_white_paper_banner.jpeg")
