--- a/src/shared-components/articleContent/articleContent.scss
+++ b/src/shared-components/articleContent/articleContent.scss
@@ -1,17 +1,19 @@
 @import "../../assets/stylesheets/core";
 
 .article-content-card-item {
-  margin-bottom: rem(24px);
+  margin-bottom: 1.5rem;
+
   @include media-breakpoint-up(md) {
-    padding: 0 rem(16px);
+    padding: 0 1rem;
     flex: 0 0 50%;
     max-width: 50%;
   }
+
   @include media-breakpoint-up(lg) {
     padding: 0;
     flex: 0 0 100%;
     max-width: 100%;
-    margin-bottom: rem(40px);
+    margin-bottom: 2.5rem;
   }
 
   &:last-child {
@@ -21,10 +23,10 @@
   }
 
   &.publication-content-wrapper {
-    margin-bottom: rem(72px);
+    margin-bottom: 4.5rem;
 
     @include media-breakpoint-up(lg) {
-      margin-bottom: rem(40px);
+      margin-bottom: 2.5rem;
     }
 
     &:last-child {
@@ -35,42 +37,43 @@
 
     .article-content {
       @include media-breakpoint-up(lg) {
-        padding-right: rem(40px);
+        padding-right: 2.5rem;
       }
     }
 
     .card-img-wrap {
       img {
-        width: rem(185px);
+        width: 11.5rem;
       }
     }
   }
 }
+
 .article-content-card {
-  box-shadow: 6px 0px 10px rgba(0, 0, 0, 0.161);
-  border-radius: 12px;
+  box-shadow: 6px 0 10px rgba(0, 0, 0, 0.161);
+  border-radius: 0.75rem;
   background-color: #ffffff;
   flex-direction: column;
-  padding: rem(24px) rem(24px) rem(48px);
+  padding: 1.5rem 1.5rem 3rem;
 
   @include media-breakpoint-up(lg) {
     flex-direction: row;
-    padding: rem(56px) rem(24px) rem(48px);
+    padding: 3.5rem 1.5rem 3rem;
   }
 }
 
 .card-img-wrap {
   img {
-    width: rem(184px);
+    width: 11.5rem;
     margin: 0 auto;
 
     @include media-breakpoint-up(lg) {
-      width: rem(228px);
+      width: 14.25rem;
     }
   }
 
   @include media-breakpoint-up(lg) {
-    margin-right: rem(64px);
+    margin-right: 4rem;
   }
 }
 
@@ -79,20 +82,20 @@
 
   > a {
     h4 {
-      font-size: rem(18px);
-      line-height: rem(26px);
+      font-size: 1.125rem;
+      line-height: 1.625rem;
       color: #020449;
-      margin-bottom: rem(24px);
+      margin-bottom: 1.5rem;
 
       @include media-breakpoint-up(lg) {
-        margin-bottom: rem(32px);
+        margin-bottom: 2rem;
       }
     }
   }
 
   p {
-    font-size: rem(14px);
-    line-height: rem(22px);
+    font-size: 0.875rem;
+    line-height: 1.375rem;
     color: #020449;
   }
 }
@@ -109,26 +112,27 @@
 
   .book-price-wrap {
     span {
-      font-size: rem(14px);
-      line-height: rem(22px);
+      font-size: 0.875rem;
+      line-height: 1.375rem;
       color: #e86055;
     }
   }
 }
 
 .social-media-list {
-  margin: rem(16px) rem(-12px) 0;
+  margin: 1rem -0.75rem 0;
 
   @include media-breakpoint-up(lg) {
     order: 2;
   }
+
   .social-media-item {
-    padding: 0 rem(12px);
+    padding: 0 0.75rem;
   }
 
   .social-media-icon {
-    width: rem(16px);
-    height: rem(16px);
+    width: 1rem;
+    height: 1rem;
     vertical-align: inherit;
   }
 }
