--- a/src/shared-components/newsBanner/newsBanner.css
+++ b/src/shared-components/newsBanner/newsBanner.css
@@ -4,16 +4,18 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.news-banner-section::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: #e86055;
-  width: 100%;
-  height: 2.75rem;
-  z-index: -1; }
+.banner-wrapper {
+  z-index: 0; }
+  .banner-wrapper::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #e86055;
+    width: 100%;
+    height: 2.75rem;
+    z-index: -1; }
 
 .banner-wrap {
   background: url("../../assets/images/revampImages/talks_banner.jpeg") no-repeat;
@@ -21,48 +23,19 @@
   width: 100%;
   height: 10rem;
   background-position: left 30% center;
-  border-radius: 0px 0px 12px 12px;
+  border-radius: 0 0 0.75rem 0.75rem;
   padding: 2.5rem 2rem;
   display: flex;
   justify-content: center;
   align-items: center; }
   @media (min-width: 992px) {
     .banner-wrap {
-      height: 19.6875rem;
+      height: 19.75rem;
       padding: 3rem 0;
       background-position: center center; } }
-  .banner-wrap h1 {
-    font-size: 2.375rem;
-    line-height: 2.8125rem; }
+  .banner-wrap .caption {
+    font-size: 2.25rem;
+    line-height: normal; }
     @media (min-width: 992px) {
-      .banner-wrap h1 {
-        font-size: 4.6875rem;
-        line-height: 5.5625rem; } }
-
-.filter-wrap {
-  margin: 0 -0.375rem; }
-  @media (min-width: 992px) {
-    .filter-wrap {
-      margin: 0 -0.5rem;
-      justify-content: center; } }
-
-.filter-pill-item {
-  padding: 0 0.375rem;
-  margin-bottom: 0.75rem; }
-  @media (min-width: 992px) {
-    .filter-pill-item {
-      padding: 0 0.5rem;
-      margin-bottom: 1rem; } }
-  .filter-pill-item > span {
-    font-size: 1rem;
-    line-height: 0.75rem;
-    color: #ffffff;
-    font-weight: 500;
-    border: 1px solid #ffffff;
-    border-radius: 16px;
-    padding: 0.5rem 2rem; }
-    .filter-pill-item > span.active {
-      font-weight: bold;
-      color: #001427;
-      background-color: #f2f2f2;
-      border: unset; }
+      .banner-wrap .caption {
+        font-size: 4.5rem; } }
