--- a/src/shared-components/newsBanner/newsBanner.css
+++ b/src/shared-components/newsBanner/newsBanner.css
@@ -16,26 +16,34 @@
     width: 100%;
     height: 2.75rem;
     z-index: -1; }
-
-.banner-wrap {
-  background: url("../../assets/images/revampImages/talks_banner.jpeg") no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 10rem;
-  background-position: left 30% center;
-  border-radius: 0 0 0.75rem 0.75rem;
-  padding: 2.5rem 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  @media (min-width: 992px) {
-    .banner-wrap {
-      height: 19.75rem;
-      padding: 3rem 0;
-      background-position: center center; } }
-  .banner-wrap .caption {
-    font-size: 2.25rem;
+  .banner-wrapper .banner {
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 10rem;
+    background-position: left 30% center;
+    border-radius: 0 0 0.75rem 0.75rem;
+    padding: 2.5rem 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media (min-width: 992px) {
+      .banner-wrapper .banner {
+        height: 19.75rem;
+        padding: 3rem 0;
+        background-position: left center; } }
+    .banner-wrapper .banner.talks {
+      background-image: url("../../assets/images/banner/talks-banner@2x.jpg"); }
+    .banner-wrapper .banner.publications {
+      background-image: url("../../assets/images/banner/publications-banner@2x.jpg"); }
+    .banner-wrapper .banner.media-coverage {
+      background-image: url("../../assets/images/banner/media-coverage-banner@2x.jpg"); }
+    .banner-wrapper .banner.white-papers {
+      background-image: url("../../assets/images/banner/white-paper-banner@2x.jpg"); }
+  .banner-wrapper .caption {
+    font-size: 1.75rem;
     line-height: normal; }
     @media (min-width: 992px) {
-      .banner-wrap .caption {
+      .banner-wrapper .caption {
         font-size: 4.5rem; } }
