--- a/src/shared-components/newsBanner/newsBanner.scss
+++ b/src/shared-components/newsBanner/newsBanner.scss
@@ -14,29 +14,45 @@
     height: 2.75rem;
     z-index: -1;
   }
-}
 
-.banner-wrap {
-  background: url("../../assets/images/revampImages/talks_banner.jpeg")
-    no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 10rem;
-  background-position: left 30% center;
-  border-radius: 0 0 0.75rem 0.75rem;
-  padding: 2.5rem 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .banner {
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 10rem;
+    background-position: left 30% center;
+    border-radius: 0 0 0.75rem 0.75rem;
+    padding: 2.5rem 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  @include media-breakpoint-up(lg) {
-    height: 19.75rem;
-    padding: 3rem 0;
-    background-position: center center;
+    @include media-breakpoint-up(lg) {
+      height: 19.75rem;
+      padding: 3rem 0;
+      background-position: left center;
+    }
+
+    &.talks {
+      background-image: url("../../assets/images/banner/talks-banner@2x.jpg");
+    }
+
+    &.publications {
+      background-image: url("../../assets/images/banner/publications-banner@2x.jpg");
+    }
+
+    &.media-coverage {
+      background-image: url("../../assets/images/banner/media-coverage-banner@2x.jpg");
+    }
+
+    &.white-papers {
+      background-image: url("../../assets/images/banner/white-paper-banner@2x.jpg");
+    }
   }
 
   .caption {
-    font-size: 2.25rem;
+    font-size: 1.75rem;
     line-height: normal;
 
     @include media-breakpoint-up(lg) {
