--- a/src/shared-components/mediaCard/mediaCard.css
+++ b/src/shared-components/mediaCard/mediaCard.css
@@ -4,34 +4,22 @@
 /* rem unit mixin */
 /* flex Sass mixin */
 /* mixins end */
-.media-card {
-  max-width: 100%;
-  width: 100%;
-  margin-top: 3rem; }
-  @media (min-width: 768px) {
-    .media-card {
-      max-width: 21rem;
-      padding: 0 1.5rem; } }
-  @media (min-width: 992px) {
-    .media-card {
-      max-width: 23rem;
-      padding: 0 1.5rem;
-      margin-top: 3.5rem; } }
-
 .media-frame {
-  width: 100%;
-  height: 100%;
+  height: 9rem;
   padding: 0 0.75rem;
   border-radius: 1rem 1rem 0 0;
   z-index: 1; }
   @media (min-width: 768px) {
     .media-frame {
-      height: 9.25rem; } }
+      height: 11rem; } }
   @media (min-width: 992px) {
     .media-frame {
-      height: 10.5rem; } }
+      height: 9rem; } }
+  @media (min-width: 1200px) {
+    .media-frame {
+      height: 11rem; } }
   .media-frame .img-box {
-    background-color: #f7f7f7;
+    background-color: #adadad;
     border-radius: 1rem 1rem 0 0; }
     .media-frame .img-box > img {
       max-width: 150%; }
