--- a/src/shared-components/mediaCard/mediaCard.scss
+++ b/src/shared-components/mediaCard/mediaCard.scss
@@ -1,39 +1,25 @@
 @import "../../assets/stylesheets/core";
 
-.media-card {
-  max-width: 100%;
-  width: 100%;
-  margin-top: 3rem;
-
-  @include media-breakpoint-up(md) {
-    max-width: 21rem;
-    padding: 0 1.5rem;
-  }
-
-  @include media-breakpoint-up(lg) {
-    max-width: 23rem;
-    padding: 0 1.5rem;
-    margin-top: 3.5rem;
-  }
-}
-
 .media-frame {
-  width: 100%;
-  height: 100%;
+  height: 9rem;
   padding: 0 0.75rem;
   border-radius: 1rem 1rem 0 0;
   z-index: 1;
 
   @include media-breakpoint-up(md) {
-    height: 9.25rem;
+    height: 11rem;
   }
 
   @include media-breakpoint-up(lg) {
-    height: 10.5rem;
+    height: 9rem;
+  }
+
+  @include media-breakpoint-up(xl) {
+    height: 11rem;
   }
 
   .img-box {
-    background-color: #f7f7f7;
+    background-color: $gray-68;
     border-radius: 1rem 1rem 0 0;
 
     > img {
@@ -43,7 +29,7 @@
 }
 
 .media-details {
-  background-color: #fff;
+  background-color: $white;
   border-radius: 0.75rem;
   padding: 4.75rem 1rem 1rem;
   margin-top: -4rem;
@@ -66,7 +52,7 @@
   p {
     font-size: 1rem;
     line-height: 1.25rem;
-    color: #333333;
+    color: $gray;
     font-weight: 500;
 
     @include media-breakpoint-up(lg) {
