--- a/src/shared-components/mediaCard/mediaCard.scss
+++ b/src/shared-components/mediaCard/mediaCard.scss
@@ -7,7 +7,7 @@
   z-index: 1;
 
   @include media-breakpoint-up(md) {
-    height: 11rem;
+    height: 10.75rem;
   }
 
   @include media-breakpoint-up(lg) {
@@ -15,7 +15,7 @@
   }
 
   @include media-breakpoint-up(xl) {
-    height: 11rem;
+    height: 10.875rem;
   }
 
   .img-box {
@@ -35,7 +35,7 @@
   margin-top: -4rem;
   flex: 1;
   width: 100%;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 1rem 0 rgba($color: $black, $alpha: 0.12);
 
   > a {
     color: #020449;
