--- a/src/assets/stylesheets/_global.scss
+++ b/src/assets/stylesheets/_global.scss
@@ -34,3 +34,12 @@ html {
     padding: 5rem 0;
   }
 }
+
+// Spinner Wrapper
+.spinner-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-items: center;
+  padding: 3rem 0;
+}
