testimonials page ui changes

--- a/src/shared-components/testimonialItem/testimonialItem.scss
+++ b/src/shared-components/testimonialItem/testimonialItem.scss
@@ -77,7 +77,7 @@
 
 .client-testimonial-info {
   flex: 1;
-  height: rem(250px);
+  height: 11.5rem;
 
   @include media-breakpoint-up(lg) {
     padding-right: rem(24px);
