--- a/src/shared-components/testimonialItem/testimonialItem.css
+++ b/src/shared-components/testimonialItem/testimonialItem.css
@@ -8,8 +8,8 @@
   margin-bottom: 1.5rem;
   background-color: #fff;
   padding: 1.5rem;
-  box-shadow: 6px 0px 10px rgba(18, 112, 168, 0.09);
-  border-radius: 12px; }
+  box-shadow: 6px 0 10px rgba(18, 112, 168, 0.09);
+  border-radius: 0.75rem; }
   @media (min-width: 992px) {
     .testimonial-card-content {
       margin-bottom: 2.5rem;
@@ -22,47 +22,32 @@
       flex-direction: row; } }
 
 .client-profile {
+  align-items: center;
+  flex-direction: column;
   margin-bottom: 1.5rem; }
   @media (min-width: 992px) {
     .client-profile {
-      width: 9.375rem;
-      text-align: center;
-      align-items: center;
-      flex-direction: column;
+      width: 13rem;
       margin-bottom: 0;
       margin-right: 2rem; } }
   .client-profile .profile-img {
-    width: 4.5625rem;
-    height: 4.5625rem;
-    border-radius: 50%;
-    margin-right: 1rem; }
-    @media (min-width: 992px) {
-      .client-profile .profile-img {
-        margin: 0 auto; } }
-  .client-profile .company-logo {
-    width: 9.375rem;
-    height: auto; }
-    @media (min-width: 992px) {
-      .client-profile .company-logo {
-        width: 100%;
-        margin: 0 auto; } }
+    width: 8rem;
+    height: 4rem;
+    border-radius: 0.5rem; }
 
-.client-details h6,
-.client-details .client-designation-text,
-.client-details .client-company-text {
-  line-height: 1.375rem;
-  color: #333333; }
-
-.client-details h6 {
-  font-size: 1.25rem;
-  margin-bottom: 0.5rem; }
-  @media (min-width: 992px) {
-    .client-details h6 {
-      margin-bottom: 1rem; } }
-
-.client-details .client-designation-text,
-.client-details .client-company-text {
-  font-size: 0.875rem; }
+.client-details {
+  text-align: center; }
+  .client-details h6,
+  .client-details .client-designation-text,
+  .client-details .client-company-text {
+    color: #333333; }
+  .client-details h6 {
+    font-size: 1.25rem;
+    line-height: 1.5rem; }
+  .client-details .client-designation-text,
+  .client-details .client-company-text {
+    font-size: 0.875rem;
+    line-height: 1.125rem; }
 
 .client-testimonial-info {
   flex: 1;
