article font changes

--- a/src/shared-components/testimonialItem/testimonialItem.scss
+++ b/src/shared-components/testimonialItem/testimonialItem.scss
@@ -69,7 +69,7 @@
   p {
     font-size: 1rem;
     line-height: 1.5rem;
-    color: #333333;
+    color: $gray-20;
     text-align: justify;
 
     &:not(:first-child) {
