--- a/src/shared-components/articleContent/articleContent.css
+++ b/src/shared-components/articleContent/articleContent.css
@@ -63,13 +63,11 @@
     line-height: 1.625rem;
     color: #020449;
     margin-bottom: 1.5rem; }
-    @media (min-width: 992px) {
-      .article-content > a h4 {
-        margin-bottom: 2rem; } }
   .article-content p {
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    color: #020449; }
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #333333;
+    text-align: justify; }
 
 .book-info-details {
   flex-wrap: wrap;
