--- a/src/shared-components/articleContent/articleContent.scss
+++ b/src/shared-components/articleContent/articleContent.scss
@@ -86,17 +86,14 @@
       line-height: 1.625rem;
       color: #020449;
       margin-bottom: 1.5rem;
-
-      @include media-breakpoint-up(lg) {
-        margin-bottom: 2rem;
-      }
     }
   }
 
   p {
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    color: #020449;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: $gray-20;
+    text-align: justify;
   }
 }
 
