--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -21,13 +21,15 @@ $assets_url: "../";
 //$gray-900: #212529 !default;
 //$black:    #000 !default;
 $gray-10: #1a1a1a; // black 90%
+$gray-11: #1c1c1c;
 $gray-20: #333333; // black 80%
 $gray-40: #666666; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #adadad; // black 32%
 $gray-94: #efefef; // black 6%
 $gray-95: #f2f2f2; // black 5%
-$gray-96: #f4f4f4; // black 4%
+$gray-96: #f4f4f4;
+$north-gray: #697579; // black 4%
 
 //$grays: () !default;
 //$grays: map-merge((
@@ -59,6 +61,9 @@ $galliano: #caae0d;
 $fountain-blue: #62aaac;
 $roman: #d1645d;
 $tea-green: #ccebb7;
+$jordy-blue: #77a9d9;
+$blue-smart: #5886b2;
+$mortor: #575353;
 
 //$colors: () !default;
 //$colors: map-merge((
