--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -1,1 +1,245 @@
+@import "../../assets/stylesheets/core";
 
+.josh-leadership-wrapper {
+  padding: 2rem 0;
+
+  .leadership-content {
+    padding: 0 1rem;
+    margin-bottom: 1rem;
+
+    @include media-breakpoint-up(lg) {
+      padding: 0 0.5rem;
+    }
+
+    .content-wrapper {
+      flex: 0 0 100%;
+      width: 100%;
+      height: 100%;
+
+      @include media-breakpoint-up(md) {
+        flex: 0 0 480px;
+        width: 480px;
+      }
+      @include media-breakpoint-up(xl) {
+        flex: 0 0 542px;
+        width: 542px;
+      }
+    }
+
+    &.page-info {
+      @include media-breakpoint-up(lg) {
+        margin-bottom: 0;
+      }
+
+      .content-wrapper {
+        padding: 0 1.5rem;
+        @include media-breakpoint-up(lg) {
+          padding: 0 3rem;
+        }
+      }
+
+      h1 {
+        text-align: center;
+        font-size: 2.25rem;
+        line-height: 2.625rem;
+        color: $gray-11;
+        margin-bottom: 1.5rem;
+
+        @include media-breakpoint-up(lg) {
+          font-size: 3.125rem;
+          line-height: 3.6875rem;
+          text-align: left;
+        }
+      }
+
+      p {
+        font-size: 1rem;
+        line-height: 1.375rem;
+        color: $gray-11;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+
+        @include media-breakpoint-up(lg) {
+          display: block;
+        }
+      }
+    }
+    @include media-breakpoint-up(lg) {
+      &:nth-child(1) {
+        order: 2;
+      }
+      &:nth-child(2) {
+        order: 1;
+      }
+      &:nth-child(3) {
+        order: 3;
+      }
+
+      &:nth-child(4) {
+        order: 4;
+      }
+      &:nth-child(5) {
+        order: 5;
+      }
+
+      &:nth-child(6) {
+        order: 6;
+      }
+      &:nth-child(7) {
+        order: 7;
+      }
+    }
+  }
+}
+
+.leadership-item {
+  background-color: transparent;
+  margin-bottom: 1rem;
+  height: 13.75rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  .leader-profile-wrap {
+    img {
+      width: 100%;
+    }
+  }
+
+  .leader-profile-wrap,
+  .leader-info {
+    flex: 0 0 50%;
+  }
+  .leader-info {
+    padding: 0.75rem;
+
+    .quotes-img {
+      width: 1.5rem;
+      height: 1.25rem;
+    }
+
+    p,
+    h5,
+    label {
+      color: $white;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.1875rem;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 0.875rem;
+      }
+    }
+
+    h5,
+    label {
+      font-size: 0.6875rem;
+      line-height: 0.9375rem;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 0.875rem;
+        line-height: 1.1875rem;
+      }
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 0;
+      height: 0;
+      top: 0.75rem;
+      left: -0.5625rem;
+      border-top: 0.625rem solid transparent;
+      border-bottom: 0.625rem solid transparent;
+      border-right: 0.625rem solid $north-gray;
+    }
+
+    &.-left {
+      &::before {
+        content: none;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        top: 0.75rem;
+        right: -0.5625rem;
+        border-top: 0.625rem solid transparent;
+        border-bottom: 0.625rem solid transparent;
+        border-left: 0.625rem solid $north-gray;
+      }
+    }
+
+    &.-light-grey {
+      background-color: $north-gray;
+      &::before {
+        border-right: 0.625rem solid $north-gray;
+      }
+    }
+
+    &.-dark-blue {
+      background-color: $blue-smart;
+      &::after {
+        border-left: 0.625rem solid $blue-smart;
+      }
+      &::before {
+        border-right: 0.625rem solid $blue-smart;
+      }
+    }
+    &.-light-blue {
+      background-color: $jordy-blue;
+      &::before {
+        border-right: 0.625rem solid $jordy-blue;
+      }
+      &::after {
+        border-left: 0.625rem solid $jordy-blue;
+      }
+    }
+
+    &.-dark-grey {
+      background-color: $mortor;
+      &::before {
+        border-right: 0.625rem solid $mortor;
+      }
+      &::after {
+        border-left: 0.625rem solid $mortor;
+      }
+    }
+  }
+  .professional-platforms {
+    a {
+      background-color: $white;
+      border-radius: 0.25rem;
+      padding: 0.125rem 0.25rem;
+
+      i {
+        color: $north-gray;
+        font-size: 1rem;
+      }
+
+      &:not(:first-child) {
+        margin-left: 0.5rem;
+      }
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.leadership-col {
+  flex-direction: column;
+  @include media-breakpoint-up(lg) {
+    // margin: 0 -0.5rem;
+    flex-direction: row;
+  }
+}
