--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -45,7 +45,7 @@
           text-align: left; } }
     .josh-leadership-wrapper .leadership-content.page-info p {
       font-size: 1rem;
-      line-height: 1.375rem;
+      line-height: 1.5rem;
       color: #1c1c1c;
       display: -webkit-box;
       -webkit-line-clamp: 4;
@@ -70,6 +70,9 @@
       .josh-leadership-wrapper .leadership-content:nth-child(7) {
         order: 7; } }
 
+.leadership-item-body {
+  height: 100%; }
+
 .leadership-item {
   background-color: transparent;
   margin-bottom: 1rem;
@@ -77,7 +80,8 @@
   .leadership-item:last-child {
     margin-bottom: 0; }
   .leadership-item .leader-profile-wrap img {
-    width: 100%; }
+    width: 100%;
+    height: 13.75rem; }
   .leadership-item .leader-profile-wrap,
   .leadership-item .leader-info {
     flex: 0 0 50%; }
