--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -54,7 +54,7 @@
 
       p {
         font-size: 1rem;
-        line-height: 1.375rem;
+        line-height: 1.5rem;
         color: $gray-11;
         display: -webkit-box;
         -webkit-line-clamp: 4;
@@ -94,6 +94,10 @@
   }
 }
 
+.leadership-item-body {
+  height: 100%;
+}
+
 .leadership-item {
   background-color: transparent;
   margin-bottom: 1rem;
@@ -106,6 +110,7 @@
   .leader-profile-wrap {
     img {
       width: 100%;
+      height: 13.75rem;
     }
   }
 
