--- a/src/shared-components/aboutUsCard/aboutUsCard.css
+++ b/src/shared-components/aboutUsCard/aboutUsCard.css
@@ -5,9 +5,10 @@
 /* flex Sass mixin */
 /* mixins end */
 .about-us-box {
-  background-color: #575353;
-  padding: 0 1rem;
-  height: 13.75rem; }
+  background-color: #575353; }
+  @media (min-width: 992px) {
+    .about-us-box {
+      height: 13.75rem; } }
   .about-us-box h6,
   .about-us-box p {
     color: #fff; }
