josh leaders page ui layout  changes

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -64,6 +64,7 @@ $tea-green: #ccebb7;
 $jordy-blue: #77a9d9;
 $blue-smart: #5886b2;
 $mortor: #575353;
+$burnt-sienna: #e86055;
 
 //$colors: () !default;
 //$colors: map-merge((
